# hnurm_old_decision_with_note

./: .gitignore  README.md  nav.xml  nav2_tree_nodes.xml  note.md
.marscode/: deviceInfo.json
hnurm_decision/: CMakeLists.txt  package.xml
hnurm_decision/include/: GameStart.hpp  PubRobotStatus.hpp  Status.hpp  decision_data_structure_def.hpp
hnurm_decision/params/: default copy.yaml  simple_test.xml
hnurm_decision/plugins/action/: PubRobotStatus.cpp
hnurm_decision/plugins/condition/: GameStart.cpp  Status.cpp
hnurm_decision/src/: decision.cpp  points_generator_node.cpp
hnurm_interfaces/: CMakeLists.txt  package.xml
hnurm_interfaces/msg/armor/: Target.msg  TrackerInfo.msg
hnurm_interfaces/msg/decision/: Area.msg  Path.msg  PathEndPoint.msg  SpecialArea.msg  Type.msg
hnurm_interfaces/msg/detect/: Armor.msg  ArmorArray.msg  ArmorType.msg  Light.msg
hnurm_interfaces/msg/uart/: BulletSpeed.msg  SelfColor.msg  TargetState.msg  TargetType.msg  VisionRecvData.msg  VisionSendData.msg  WorkMode.msg
include/: GameStart.hpp  Status.hpp  pubRobotStatus.hpp
launch/: generate_points.launch.py  hnurm_decision.launch.py
params/: default.yaml  testing.xml
plugins/action/: AttackOutpost_NO_USE_LC.cpp  pubRobotStatus.cpp
plugins/condition/: Comparator_NO_USE_LC.cpp  GameStart.cpp  Status.cpp  checkhp_NO_USE_LC.cpp
plugins/control/: RootControl_NO_USE_LC.cpp
plugins/decorator/: AlwaysRepeat_NOUSE_LC.cpp
src/: decision.cpp
