<?xml version="1.0"?>
<package format="3">
  <name>hnurm_decision</name>
  <version>0.0.1</version>
  <description>A simple ROS 2 package for behavior tree based decision making</description>
  <maintainer email="1304634714@qq.com">rm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>Eigen3</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>hnurm_interfaces</depend> 
  <depend>hnurm_armor</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
